# soloK

k100/: CMakeLists.txt
k100/examples/: CMakeLists.txt  example_basic.cpp  example_custom_edge.cpp
k100/include/vk浮雕/: camera_reader.h  cli_parser.h  common.h  compute_pipeline.h  edge_detector.h  light_tracker.h  lighting_renderer.h  logger.h  normal_map.h  object_detector.h  offscreen_renderer.h  relief_pipeline.h  sobel_detector.h  utils.h  video_reader.h  video_writer.h  vulkan_context.h  vulkan_utils.h  yolo_detector.h
k100/shaders/: lighting.comp  normal_map.comp  sobel.comp
k100/src/: CMakeLists.txt  cli_parser.cpp  main.cpp
k100/src/core/: CMakeLists.txt  frame.cpp  logger.cpp  utils.cpp
k100/src/detection/: CMakeLists.txt  light_tracker.cpp  object_detector.cpp  yolo_detector.cpp
k100/src/edge_detection/: CMakeLists.txt  edge_detector.cpp  sobel_detector.cpp
k100/src/python/: CMakeLists.txt  vk浮雕_python.cpp
k100/src/renderer/: CMakeLists.txt  lighting_renderer.cpp  normal_map.cpp  relief_pipeline.cpp
k100/src/video/: CMakeLists.txt  camera_reader.cpp  video_reader.cpp  video_writer.cpp
k100/src/vulkan/: CMakeLists.txt  compute_pipeline.cpp  offscreen_renderer.cpp  vulkan_context.cpp  vulkan_utils.cpp
k11/: CMakeLists.txt
k11/include/core/: AnimationAnalyzer.h  DataTypes.h  Utils.h
k11/include/export/: FileExporter.h
k11/include/gui/: MainWindow.h
k11/include/measurement/: MeasurementTools.h
k11/include/meshing/: SurfaceReconstructor.h
k11/include/mvs/: DenseReconstructor.h
k11/include/phylogeny/: NexusExporter.h  PhylogeneticFeatures.h
k11/include/registration/: FossilRegistration.h
k11/include/sampling/: BoneThicknessAnalyzer.h  SamplingPathPlanner.h
k11/include/sfm/: SfMReconstructor.h
k11/src/: main.cpp
k11/src/core/: AnimationAnalyzer.cpp  Utils.cpp
k11/src/export/: FileExporter.cpp
k11/src/gui/: MainWindow.cpp  MainWindow.ui
k11/src/measurement/: MeasurementTools.cpp
k11/src/meshing/: SurfaceReconstructor.cpp
k11/src/mvs/: DenseReconstructor.cpp
k11/src/phylogeny/: NexusExporter.cpp  PhylogeneticFeatures.cpp
k11/src/registration/: FossilRegistration.cpp
k11/src/sampling/: BoneThicknessAnalyzer.cpp  SamplingPathPlanner.cpp
k11/src/sfm/: SfMReconstructor.cpp
k14/: Cargo.toml  README.md  config.yaml
k14/src/: batch.rs  cli.rs  comparison.rs  config.rs  damage.rs  decay_prediction.rs  defect_reconstruction.rs  lib.rs  main.rs  mechanics.rs  pointcloud.rs  report.rs
k16/backend/cpp/: CMakeLists.txt
k17/: CMakeLists.txt
k17/resources/: resources.qrc
k17/src/: main.cpp
k17/src/core/: Calibrator.cpp  Calibrator.h  DICProcessor.cpp  DICProcessor.h  FusionProcessor.cpp  FusionProcessor.h  ImageRegistrar.cpp  ImageRegistrar.h  PhaseUnwrapper.cpp  PhaseUnwrapper.h  SpeckleProcessor.cpp  SpeckleProcessor.h  StrainCalculator.cpp  StrainCalculator.h  StrainDecomposer.cpp  StrainDecomposer.h
k17/src/gui/: CalibrationDialog.cpp  CalibrationDialog.h  ExportDialog.cpp  ExportDialog.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  ROISelector.cpp  ROISelector.h  TimeHistoryWidget.cpp  TimeHistoryWidget.h
k17/src/io/: DataExporter.cpp  DataExporter.h  VideoSource.cpp  VideoSource.h
k17/src/utils/: ColorMap.cpp  ColorMap.h  MathUtils.cpp  MathUtils.h
k20/FreeDPlugin/: CMakeLists.txt
k20/FreeDPlugin/include/: FreeDPluginAPI.h  FreeDProtocol.h  UDPSocket.h
k20/FreeDPlugin/src/: FreeDPluginAPI.cpp  FreeDProtocol.cpp  UDPSocket.cpp
k30/: BUILD.md  CMakeLists.txt  InfraredWaterDetection.pro
k30/sample_data/: frame_001.csv
k30/src/: MainWindow.cpp  MainWindow.h  main.cpp
k30/src/data/: AnomalyRegion.cpp  AnomalyRegion.h  GeologicalModel.cpp  GeologicalModel.h  TEMData.cpp  TEMData.h  TemperatureFrame.cpp  TemperatureFrame.h  ThreeDPosition.cpp  ThreeDPosition.h
k30/src/io/: FLIRImporter.cpp  FLIRImporter.h  TEMImporter.cpp  TEMImporter.h
k30/src/processing/: CrossValidationAnalyzer.cpp  CrossValidationAnalyzer.h  ImageRegistration.cpp  ImageRegistration.h  TemperatureCalibration.cpp  TemperatureCalibration.h  TemperatureFieldAnalyzer.cpp  TemperatureFieldAnalyzer.h  TimeSeriesAnalyzer.cpp  TimeSeriesAnalyzer.h  WaterStructureLocalizer.cpp  WaterStructureLocalizer.h
k30/src/report/: ReportGenerator.cpp  ReportGenerator.h
k30/src/widgets/: FusionViewer.cpp  FusionViewer.h  Geological3DView.cpp  Geological3DView.h  ReportPreview.cpp  ReportPreview.h  TemperatureViewer.cpp  TemperatureViewer.h  TimeSeriesChart.cpp  TimeSeriesChart.h
k36/: BUILD.md  CMakeLists.txt
k36/include/core/: PointCloudData.h  SegmentationResult.h  Tree.h  typedefs.h
k36/include/features/: CompetitionIndex.h  IncrementBorer.h  SlopeCorrector.h  TreeParameterExtractor.h
k36/include/gui/: MainWindow.h  ProcessingWorker.h
k36/include/io/: PointCloudLoader.h  ResultExporter.h
k36/include/segmentation/: ManualCorrection.h  TerrainNormalizer.h  TreeSegmenter.h  TreeTopDetector.h
k36/include/visualization/: CompetitionVisualizer.h  PointCloudVisualizer.h  TreeVisualizer.h
k36/src/: main.cpp
k36/src/core/: PointCloudData.cpp  SegmentationResult.cpp  Tree.cpp
k36/src/features/: CompetitionIndex.cpp  IncrementBorer.cpp  SlopeCorrector.cpp  TreeParameterExtractor.cpp
k36/src/gui/: MainWindow.cpp  MainWindow.ui  ProcessingWorker.cpp
k36/src/io/: PointCloudLoader.cpp  ResultExporter.cpp
k36/src/segmentation/: ManualCorrection.cpp  TerrainNormalizer.cpp  TreeSegmenter.cpp  TreeTopDetector.cpp
k36/src/visualization/: CompetitionVisualizer.cpp  PointCloudVisualizer.cpp  TreeVisualizer.cpp
k55/: CMakeLists.txt
k55/shaders/: blur.frag  blur.vert  gbuffer.frag  gbuffer.vert  postprocess.frag  postprocess.vert  reflection.frag  reflection.vert  shadow.vert  ssao.frag  voxel.frag  voxel.vert
k55/src/: main.cpp
k55/src/core/: Camera.cpp  Camera.h
k55/src/math/: Frustum.h  Mat4.h  Vec3.h
k55/src/render/: Lighting.h  VulkanRenderer.cpp  VulkanRenderer.h
k55/src/ui/: MainWindow.cpp  MainWindow.h  VulkanWindow.cpp  VulkanWindow.h
k55/src/voxel/: Chunk.h  ChunkManager.cpp  ChunkManager.h  (+2 more)
(+1649 files in other folders)
