add_executable(example_basic
    example_basic.cpp
)

target_link_libraries(example_basic
    vkµĄ«ķøĢ_core
    vkµĄ«ķøĢ_vulkan
    vkµĄ«ķøĢ_video
    vkµĄ«ķøĢ_edge
    vkµĄ«ķøĢ_renderer
    ${Vulkan_LIBRARIES}
    ${FFMPEG_LIBRARIES}
)

add_executable(example_custom_edge
    example_custom_edge.cpp
)

target_link_libraries(example_custom_edge
    vkµĄ«ķøĢ_core
    vkµĄ«ķøĢ_vulkan
    vkµĄ«ķøĢ_video
    vkµĄ«ķøĢ_edge
    vkµĄ«ķøĢ_renderer
    ${Vulkan_LIBRARIES}
    ${FFMPEG_LIBRARIES}
)
