add_library(vkµĄ«ķøĢ_detection
    object_detector.cpp
    yolo_detector.cpp
    light_tracker.cpp
)

target_include_directories(vkµĄ«ķøĢ_detection PUBLIC
    ${CMAKE_SOURCE_DIR}/include
)

if(USE_ONNXRUNTIME)
    find_package(OnnxRuntime REQUIRED)
    target_compile_definitions(vkµĄ«ķøĢ_detection PUBLIC USE_ONNXRUNTIME)
    target_include_directories(vkµĄ«ķøĢ_detection PUBLIC ${OnnxRuntime_INCLUDE_DIRS})
    target_link_libraries(vkµĄ«ķøĢ_detection PUBLIC ${OnnxRuntime_LIBRARIES})
endif()

target_link_libraries(vkµĄ«ķøĢ_detection
    vkµĄ«ķøĢ_core
)
