find_package(pybind11 REQUIRED)

pybind11_add_module(vkµĄ«ķøĢ_python
    vkµĄ«ķøĢ_python.cpp
)

target_link_libraries(vkµĄ«ķøĢ_python PRIVATE
    vkµĄ«ķøĢ_core
    vkµĄ«ķøĢ_vulkan
    vkµĄ«ķøĢ_video
    vkµĄ«ķøĢ_edge
    vkµĄ«ķøĢ_detection
    vkµĄ«ķøĢ_renderer
    ${Vulkan_LIBRARIES}
    ${FFMPEG_LIBRARIES}
)

set_target_properties(vkµĄ«ķøĢ_python PROPERTIES
    OUTPUT_NAME "vkµĄ«ķøĢ"
)
